--- a/day01/01.html
+++ b/day01/01.html
@@ -11,7 +11,10 @@
   <!-- <script src="/02-流程.js"></script> -->
   <!-- <script src="./03-数组.js"></script> -->
   <!-- <script src="./04-对象.js"></script> -->
-  <script src="./05-函数.js"></script>
+  <!-- <script src="./05-函数.js"></script> -->
+  <!-- <script src="./06-数字.js"></script> -->
+  <!-- <script src="./07-日期.js"></script> -->
+  <script src="./08-str.js"></script>
   
 </body>
 </html>
